--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
