--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -10,3 +10,9 @@ services:
     restart: always
     ports:
       - 4000:4000
+      - 9464:9464
+  prometheus:
+    image: macsakarn/devtool-prometheus-final:1.0.0
+    restart: always
+    ports:
+      - 9090:9090
